# pgxn-bridge

./: Cargo.toml  Dockerfile
src/: dist.rs  git.rs  github.rs  main.rs  trunk.rs
src/trunk/: trunk_toml.rs
