[package]
name = "pgxn-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] } 
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "process", "rt-multi-thread"] }
anyhow = "1.0.79"
tempfile = "3.10.0"
once_cell = "1.19.0"
zip = "0.6.6"
bytes = "1.5.0"
fs-err = "2.11.0"
tar = "0.4.40"
flate2 = { version = "1.0.26", features = ["zlib"], default-features = false }
toml = "0.8.10"
git2 = "0.18.2"
